# data-file-converter

./: README.md  pyproject.toml  requirements.txt
app/: app.py  console.py  console_message_model.py  file_converter.py  main.py  mainwindow.py  mainwindow.ui  rc_resources.py  resources.qrc  ui_mainwindow.py
app/output/: sample1.yaml
app/output/Subfolder/: sample2.xml
tests/: test_mainwindow.py
tests/test_file_converter/: test_dump.py  test_get_file_paths.py  test_load.py
tests/test_mainwindow/: test_change_backup_state.py  test_change_include_all_types_state.py  test_change_overwrite_state.py  test_get_backup_folder.py  test_get_input_files.py  test_get_input_folder.py  test_get_output_folder.py  test_handle_backup_state_changed.py  test_handle_convert_clicked.py  test_handle_include_all_state_changed.py  test_handle_include_subfolders_state_changed.py  test_handle_include_type_state_changed.py  test_handle_overwrite_state_changed.py  test_handle_target_type_changed.py
