[project]
name = "File Converter App"

[tool.pyside6-project]
files = ["app/console.py", "app/console_message_model.py", "app/file_converter.py", "app/main.py", "app/mainwindow.py", "app/mainwindow.ui", "app/resources.qrc", "tests/test_file_converter/test_get_file_paths.py", "tests/test_file_converter/test_load.py", "tests/test_mainwindow/test_get_backup_folder.py", "tests/test_mainwindow/test_get_input_files.py", "tests/test_mainwindow/test_get_input_folder.py", "tests/test_mainwindow/test_get_output_folder.py", "tests/test_mainwindow/test_handle_backup_state_changed.py", "tests/test_mainwindow/test_handle_convert_clicked.py", "tests/test_mainwindow/test_handle_include_subfolders_state_changed.py", "tests/test_mainwindow/test_handle_include_type_state_changed.py", "tests/test_mainwindow/test_handle_overwrite_state_changed.py", "tests/test_mainwindow/test_handle_target_type_changed.py"]
